--- a/Code/front/ui/page_friend_list_ui.ui
+++ b/Code/front/ui/page_friend_list_ui.ui
@@ -136,11 +136,11 @@ QLineEdit{
             <enum>Qt::Horizontal</enum>
            </property>
            <property name="sizeType">
-            <enum>QSizePolicy::Fixed</enum>
+            <enum>QSizePolicy::Minimum</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>200</width>
+             <width>100</width>
              <height>20</height>
             </size>
            </property>
@@ -387,7 +387,7 @@ QLineEdit{
                     <x>0</x>
                     <y>0</y>
                     <width>444</width>
-                    <height>646</height>
+                    <height>653</height>
                    </rect>
                   </property>
                   <layout class="QVBoxLayout" name="la1">
