--- a/Code/front/ui/widget_search_talk_room_member_list.ui
+++ b/Code/front/ui/widget_search_talk_room_member_list.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>554</width>
-    <height>147</height>
+    <height>296</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -117,15 +117,30 @@ QLineEdit{
        <property name="widgetResizable">
         <bool>true</bool>
        </property>
-       <widget class="QWidget" name="scrollAreaWidgetContents">
+       <widget class="QWidget" name="widget_user_list">
         <property name="geometry">
          <rect>
           <x>0</x>
           <y>0</y>
           <width>532</width>
-          <height>69</height>
+          <height>218</height>
          </rect>
         </property>
+        <layout class="QVBoxLayout" name="verticalLayout_3">
+         <item>
+          <widget class="QWidget" name="widget_to_add_item" native="true"/>
+         </item>
+         <item>
+          <widget class="QWidget" name="widget_to_spacer" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </widget>
      </item>
